分包结构，添加feign注解

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,1 @@
-server.port=80
-
-#SpringBoot热部署生效
-spring.devtools.restart.enabled=true
-#设置重启目录
-spring.devtools.restart.additional-paths=src/main/java
-#classpath目录下的WEB‐INF文件夹内容修改不重启
-spring.devtools.restart.exclude=templates
-
-#freemarker\u9759\u6001\u8D44\u6E90\u914D\u7F6E
-#\u8BBE\u5B9Aftl\u6587\u4EF6\u8DEF\u5F84
-spring.freemarker.template-loader-path=classpath:/templates/
-# \u5173\u95ED\u7F13\u5B58\uFF0C\u53CA\u65F6\u5237\u65B0\uFF0C\u4E0A\u7EBF\u751F\u4EA7\u73AF\u5883\u9700\u8981\u4FEE\u6539\u4E3Atrue
-spring.freemarker.cache=false
-spring.freemarker.charset=UTF-8
-spring.freemarker.check-template-location=true
-spring.freemarker.content-type=text/html
-spring.freemarker.expose-request-attributes=true
-spring.freemarker.expose-session-attributes=true
-spring.freemarker.request-context-attribute=request
-#\u9632\u6B62session\u8986\u76D6
-spring.freemarker.allow-session-override=true
-#\u6A21\u677F\u540E\u7F00
-spring.freemarker.suffix=.ftl
+spring.profiles.include=dev
