--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 
 #服务名
-spring.application.name=backstage-server
+spring.application.name=reception-server
 
 #将当前服务注册到 eureka 注册中心上
 eureka.client.serviceUrl.defaultZone=http://localhost:0010/eureka/
@@ -19,3 +19,16 @@ spring.freemarker.expose-session-attributes=true
 spring.freemarker.request-context-attribute=request
 #模板后缀
 spring.freemarker.suffix=.ftl
+
+
+
+#feign调用默认是1000毫秒=1秒   应该设置成更长时间1000 * 60 * 5  = 5分钟  add by six-vision
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=300000
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=300000
+hystrix.command.default.circuitBreaker.forceClosed=true
+#hystrix.command.default.execution.timeout.enabled=false
+#请求处理的超时时间  add by six-vision
+ribbon.ReadTimeout=300000
+ribbon.SocketTimeout=300000
+#请求连接的超时时间 add by six-vision
+ribbon.ConnectTimeout: 30000
