--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,9 +5,9 @@ spring.application.name=reception-server
 #将当前服务注册到 eureka 注册中心上
 eureka.client.serviceUrl.defaultZone=http://localhost:0010/eureka/
 
-server.port=8022
-#freemarker静态资源配置
-#设定ftl文件路径
+server.port=80
+#设定ftl文件路径22
+##freemarker静态资源配置
 spring.freemarker.template-loader-path=classpath:/templates
 # 关闭缓存，及时刷新，上线生产环境需要修改为true
 spring.freemarker.cache=false
